# EL26

./: .dockerignore  .gitattributes  .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md
.github/: branch-protection.json  pull_request_template.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/scripts/: export_openapi.py
backend/src/time_agent/: config.py  main.py
backend/src/time_agent/bootstrap/: app.py
backend/src/time_agent/modules/system/: api.py  schemas.py
backend/tests/architecture/: rules.py  test_module_boundaries.py
backend/tests/integration/system/: test_openapi.py
backend/tests/unit/system/: test_live.py
contracts/: openapi.json
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
docs/: README.md
docs/adr/: 0001-modular-monolith-runtime-split.md  0002-langgraph-orchestration-boundary.md  0003-text-rag-retrieval-architecture.md  0004-runtime-profile-and-memory-adapters.md
docs/architecture/: v1-system-design.md
docs/engineering/: ci-checks.md  dependency-policy.md  development-lifecycle.md  release-and-operations.md  test-and-evaluation-strategy.md  v1-delivery-roadmap.md
docs/product/: v1-product-spec.md
docs/superpowers/plans/: 2026-07-17-phase-0-engineering-foundation.md  2026-07-21-m1-identity-workbench.md  (+1 more)
frontend/: .prettierignore  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.tsx
tools/: check_contract.py  project.py
tools/tests/: test_project.py
(+8 files in other folders)
