[project]
name = "time-agent-backend"
version = "0.1.0"
description = "Time learning and scheduling agent API"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi==0.139.2",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "uvicorn[standard]==0.51.0",
]

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "httpx2==2.7.0",
  "mypy==2.3.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "licensecheck==2026.0.8",
  "pip-audit==2.10.1",
  "ruff==0.15.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/time_agent"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --import-mode=importlib"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: tests that cross an application or protocol boundary",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "RUF"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
explicit_package_bases = true
